bin/testsuite/tests/compiler/src/errors/compiler1324.swg
//#global testerror "Err0508"

#[Swag.Macro]
func toto()
{
    #macro
    {
        var cpt = 0
    }
}

//#[Swag.PrintBc]
#test
{
    var cpt = 0
    toto()
}
